requests turned to async

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DmitryVasilkov.github.io/Garden_front",
+  "homepage": "https://DmitryVasilkov.github.io/Garden_front/",
   "name": "app",
   "version": "0.1.0",
   "private": true,
